src/test/ui/type-alias-impl-trait/not_a_defining_use.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/not_a_defining_use.rs:3:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: non-defining opaque type use in defining scope
  --> $DIR/not_a_defining_use.rs:12:27
   |
LL | fn two<T: Debug>(t: T) -> Two<T, u32> {
   |                           ^^^^^^^^^^^
   |
note: used non-generic type `u32` for generic parameter
  --> $DIR/not_a_defining_use.rs:10:13
   |
LL | type Two<T, U> = impl Debug;
   |             ^

error: aborting due to previous error; 1 warning emitted

